deploy: 46f5f7c01e58370f9d8ccd69e794e9a43bd04b0e

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -48,7 +48,7 @@ collections:
         required: false
       - label: Date
         name: date
-        widget: date
+        widget: datetime
       - label: Title
         name: title
         widget: string
